--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,7 @@ path:
   cov_csv_path: "domain_covariances.csv"
   
 senario:
-  pattern_id: "senario_3"
+  pattern_id: "previousresearch_2_1"
   weight_id: "relative_importance"
   model_id: "linear"
 
@@ -11,7 +11,7 @@ hyperparam:
   alpha: 1  
   split_ratio: 1
   n_trial: 100
-  n_features: 2
+  n_features: 10
   n_split: 5
 
 datasettings:
@@ -19,4 +19,4 @@ datasettings:
   source1_number: 54
   source2_number: 36
   true_coffience:
-    - [1.5,-2,0.8] 
+    - [0,1,1,1,1,1,1,1,1,1,1] 
