--- a/config.yaml
+++ b/config.yaml
@@ -3,18 +3,18 @@ path:
   cov_csv_path: "domain_covariances.csv"
   
 senario:
-  pattern_id: "senario_3"
+  pattern_id: "previousresearch_2_3"
 
 hyperparam:
   alpha: 1  
   split_ratio: 1
   n_trial: 100
-  n_features: 2
+  n_features: 10
   n_split: 5
 
 datasettings:
-  target_number: 210
-  source1_number: 54
-  source2_number: 36
+  target_number: 240
+  source1_number: 36
+  source2_number: 24
   true_coffience:
-    - [1.5,-2.0,0.8] 
+    - [0,1,1,1,1,1,1,1,1,1,1] 
