♻️recator: refactor config YAML for readability

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,26 +1,35 @@
 hyperparam:
 datasettings:
 
-# シナリオ設定
-senario:
-  pattern_id: "10dim_senario_1"
-  model_id: "linear"
 
-# ハイパーパラメータ
-hyperparam:
-  alpha: 1
-  split_ratio: 1
-  n_trial: 100
-  n_features: 10
-  n_split: 5
-  true_value: 1
-  true_coffience:
-    - [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
+# =============================
+# 実験設定ファイル
+# =============================
 
-# データセット設定
-datasettings:
-  target_number: 210
-  source1_number: 36
-  source2_number: 24
+experiment:
+  # シナリオ
+  scenario:
+    pattern_name: "10dim_senario_1"
+    model_name: "linear"
+
+  # データセット
+  dataset:
+    target_number: 210
+    source:
+      - name: source1
+        number: 36
+      - name: source2
+        number: 24
+
+  # ハイパーパラメータ
+  hyperparameters:
+    alpha: 1
+    split_ratio: 1
+    n_trial: 100
+    n_split: 5
+    n_features: 10
+    true_params:
+      value: 1
+      coffience: [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
   
   
