--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,6 +7,13 @@
     "containerEnv": {
         "TZ": "Asia/Tokyo"
     },
+    "runArgs": [
+        "-v",
+        "${env:SSH_AUTH_SOCK}:/ssh-agent",
+        "-e",
+        "SSH_AUTH_SOCK=/ssh-agent"
+    ],
+
     "features": {
         "ghcr.io/devcontainers/features/common-utils:2": {
             "installZsh": "true",
