--- a/.devcontainer/dockerfile
+++ b/.devcontainer/dockerfile
@@ -2,6 +2,8 @@ FROM debian:bookworm-slim
 
 RUN apt-get update && apt-get install -y \
     tmux \
+    git \
+    openssh-client \
     libgl1 \
     libglib2.0-0 \
     && rm -rf /var/lib/apt/lists/*
