--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,46 +1,42 @@
 {
-    "name": "Inverse Probability Weighted Machine Learning",
-    "build": {
-        "dockerfile": "Dockerfile",
-        "context": "."
-    },
-    "containerEnv": {
-        "TZ": "Asia/Tokyo"
-    },
-    "runArgs": [
-        "-v",
-        "${env:SSH_AUTH_SOCK}:/ssh-agent",
-        "-e",
-        "SSH_AUTH_SOCK=/ssh-agent"
-    ],
+  "name": "Inverse Probability Weighted Machine Learning",
+  "build": {
+    "dockerfile": "Dockerfile",
+    "context": "."
+  },
 
-    "features": {
-        "ghcr.io/devcontainers/features/common-utils:2": {
-            "installZsh": "true",
-            "username": "vscode",
-            "userUid": "1000",
-            "userGid": "1000",
-            "upgradePackages": "true"
-        },
-        "ghcr.io/devcontainers/features/git:1": {
-            "version": "latest",
-            "ppa": "false"
-        },
-        "ghcr.io/devcontainers/features/github-cli:1": {
-            "version": "latest",
-            "ppa": "false"
-        }
+  "containerEnv": {
+    "TZ": "Asia/Tokyo",
+    "SSH_AUTH_SOCK": "/ssh-agent"
+  },
+
+  "features": {
+    "ghcr.io/devcontainers/features/common-utils:2": {
+      "installZsh": "true",
+      "username": "vscode",
+      "userUid": "1000",
+      "userGid": "1000",
+      "upgradePackages": "true"
     },
-    "customizations": {
-        "vscode": {
-            "extensions": [
-                "ms-python.python",
-                "mhutchie.git-graph",
-                "yzhang.markdown-all-in-one",
-                "mechatroner.rainbow-csv"
-            ]
-        }
+    "ghcr.io/devcontainers/features/git:1": {
+      "version": "latest"
     },
-    "remoteUser": "vscode",
-    "postCreateCommand": "uv sync"
+    "ghcr.io/devcontainers/features/github-cli:1": {
+      "version": "latest"
+    }
+  },
+
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "ms-python.python",
+        "mhutchie.git-graph",
+        "yzhang.markdown-all-in-one",
+        "mechatroner.rainbow-csv"
+      ]
+    }
+  },
+
+  "remoteUser": "vscode",
+  "postCreateCommand": "uv sync"
 }
